--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node build/server.js",
+    "build": "babel src --out-dir build"
   },
   "author": "",
   "license": "ISC",
@@ -15,7 +16,14 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongoose": "^7.6.0",
+    "openai": "^4.11.1",
     "winston": "^3.11.0",
     "winston-daily-rotate-file": "^4.7.1"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.23.0",
+    "@babel/core": "^7.23.0",
+    "@babel/preset-env": "^7.22.20",
+    "babel-plugin-module-resolver": "^5.0.0"
   }
 }
