--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node build/server.js",
+    "start": "npm run build && node build/server.js",
     "build": "babel src --out-dir build"
   },
   "author": "",
@@ -16,7 +16,9 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongoose": "^7.6.0",
+    "nodemailer": "^6.9.5",
     "openai": "^4.11.1",
+    "say": "^0.16.0",
     "winston": "^3.11.0",
     "winston-daily-rotate-file": "^4.7.1"
   },
